// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/fragments/Detail/elements/SectionNumbering render 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={3}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <Numbering
      alignItems="flex-start"
      data={
        Object {
          "name": "name",
        }
      }
      number={1}
      schema={
        Array [
          Object {
            "label": "satu",
            "name": "name",
          },
          Object {
            "label": "empty",
            "name": "empty",
          },
        ]
      }
      size="default"
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <Numbering
      alignItems="flex-start"
      data={
        Object {
          "x": "",
        }
      }
      number={2}
      schema={
        Array [
          Object {
            "label": "satu",
            "name": "name",
          },
          Object {
            "label": "empty",
            "name": "empty",
          },
        ]
      }
      size="default"
    />
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`src/fragments/Detail/elements/SectionNumbering render/others 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={3}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <Numbering
      alignItems="center"
      data="name"
      number={1}
      schema={null}
      size="default"
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <Numbering
      alignItems="center"
      data="-"
      number={2}
      schema={null}
      size="default"
    />
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
